# rwiki

./: Cargo.toml  README.md  bacon.toml
src/: main.rs  routes.rs
static/: style.css
templates/: header.html  page.html
