[package]
name = "rwiki"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
